--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "create",
     "build"
   ],
-  "author": "Sam Verschueren",
+  "author": {
+    "name": "Sam Verschueren",
+    "email": "sam.verschueren@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/SamVerschueren/gulp-cordova-create/issues"
   },
   "homepage": "https://github.com/SamVerschueren/gulp-cordova-create",
   "dependencies": {
-    "cordova-lib": "^4.3.0"
+    "cordova-lib": "^4.3.0",
+    "mkdirp": "^0.5.0",
+    "through2": "^0.6.5"
   }
 }
