--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/SamVerschueren/gulp-cordova-create",
   "dependencies": {
     "cordova-lib": "^4.3.0",
+    "gulp-util": "^3.0.4",
     "mkdirp": "^0.5.0",
     "through2": "^0.6.5"
   }
