--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create a cordova project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "xo"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,8 @@
     "gulp-util": "^3.0.4",
     "mkdirp": "^0.5.0",
     "through2": "^0.6.5"
+  },
+  "devDependencies": {
+    "xo": "*"
   }
 }
