--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   ],
   "dependencies": {
     "cordova-lib": "6.2.0",
+    "extend": "^3.0.0",
     "gulp-util": "^3.0.4",
     "mkdirp": "^0.5.0",
+    "q": "^1.4.1",
     "through2": "^2.0.0"
   },
   "devDependencies": {
