--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gulp-cordova"
   ],
   "dependencies": {
-    "cordova-lib": "^7.0.1",
+    "cordova-create": "^1.1.1",
     "gulp-util": "^3.0.4",
     "mkdirp": "^0.5.0",
     "through2": "^2.0.0"
