--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-  "name": "gulp-cordova-create",
-  "version": "1.3.1",
-  "description": "Create a cordova project",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SamVerschueren/gulp-cordova-create.git"
-  },
-  "homepage": "https://github.com/SamVerschueren/gulp-cordova-create",
-  "bugs": {
-    "url": "https://github.com/SamVerschueren/gulp-cordova-create/issues"
-  },
-  "author": {
-    "name": "Sam Verschueren",
-    "email": "sam.verschueren@gmail.com"
-  },
-  "main": "index.js",
-  "scripts": {
-    "test": "xo"
-  },
-  "keywords": [
-    "gulp",
-    "gulpjs",
-    "cordova",
-    "create",
-    "build",
-    "gulp-cordova"
-  ],
-  "dependencies": {
-    "cordova-lib": "6.2.0",
-    "gulp-util": "^3.0.4",
-    "mkdirp": "^0.5.0",
-    "through2": "^2.0.0"
-  },
-  "devDependencies": {
-    "xo": "*"
-  }
+	"name": "gulp-cordova-create",
+	"version": "1.3.1",
+	"description": "Create a cordova project",
+	"license": "MIT",
+	"repository": "SamVerschueren/gulp-cordova-create",
+	"author": {
+		"name": "Sam Verschueren",
+		"email": "sam.verschueren@gmail.com"
+	},
+	"main": "index.js",
+	"scripts": {
+		"test": "xo"
+	},
+	"keywords": [
+		"gulp",
+		"gulpjs",
+		"cordova",
+		"create",
+		"build",
+		"gulp-cordova"
+	],
+	"dependencies": {
+		"cordova-lib": "6.2.0",
+		"gulp-util": "^3.0.4",
+		"mkdirp": "^0.5.0",
+		"through2": "^2.0.0"
+	},
+	"devDependencies": {
+		"xo": "*"
+	}
 }
